client/reader/following-manage/style.scss
.following-manage__header {
	font-weight: 600;
	margin: 14px 0 14px 14px;

	@include breakpoint( ">660px" ) {
		margin: 36px 0 20px;
	}
}

.following-manage .search {
	margin: 0;
}

.following-manage .following-manage__input-card {
	padding: 0;
}

.following-manage__subscriptions {
	margin-top: 20px;
	padding-top: 10px;
}

// Load more results
.following-manage__show-more {
	border-top: 1px solid lighten( $gray, 20% );
	display: flex;
	justify-content: center;
	margin-top: 10px;
}

.following-manage__show-more-button.button {
	border-top: 0;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
	color: $gray;
	font-size: 11px;
	padding: 2px 9px 6px 11px;
	position: relative;
		top: -1px;

	.gridicon.gridicons-chevron-down {
		height: 14px;
		left: -4px;
		top: 3px;
		width: 14px;
	}

	&:hover {
		color: darken( $gray, 10% );
		cursor: pointer;
	}
}

// Subscription controls
.following-manage__subscriptions-controls {
	display: flex;

	@include breakpoint( "<960px" ) {
		flex-wrap: wrap;
	}

	@include breakpoint( "<660px" ) {
		margin: 0 15px;
	}

	> :not( :first-child ) {
		margin-right: 10px;
	}

	.following-manage__subscriptions-header {
		align-items: center;
		display: flex;
		flex: 1;
		font-weight: 600;
		padding-bottom: 15px;

		@include breakpoint( "<960px" ) {
			flex: 0 0 auto;
			width: 100%;
		}
	}

	.following-manage__subscriptions-sort {
		position: relative;

		&::before {

			@include breakpoint( "<960px" ) {

				@include long-content-fade( $size: 20% );
				height: 30px;
				right: 30px;
				top: 1px;
			}
		}
	}

	.following-manage__subscriptions-sort,
	.following-manage__subscriptions-search {

		@include breakpoint( "<960px" ) {
			flex: 1;
		}
	}

	.following-manage__subscriptions-sort .following-manage__sort-controls {
		color: $gray;
		font-size: 12px;
		font-weight: normal;
		width: 100%;

		@include breakpoint( ">960px" ) {
			min-width: 200px;
		}
	}

	.following-manage__subscriptions-search {
		margin-top: 1px;

		@include breakpoint( "<660px" ) {
			margin-right: 0;
		}
	}

	.following-manage__subscriptions-search .search-card {
		box-shadow: 0 0 0 1px transparentize( lighten( $gray, 20% ), .3 );

		.following-manage__search-followed-input.is-compact {
			height: 32px;

			@include breakpoint( "<660px" ) {
				min-width: 0;
			}
		}

		.search__input {
			background: transparent;
			height: 30px;
		}
	}

	.following-manage__subscriptions-import-export {
		margin-right: 0;

		@include breakpoint( "<660px" ) {
			display: none;
		}

		.gridicon.gridicons-ellipsis {
			fill: lighten( $gray, 10% );
			top: 0;
		}
	}
}

.following-manage__subscriptions-import-export-menu-item {

	.reader-import-button__icon,
	.reader-export-button__icon {
		vertical-align: middle;
	}

	&:hover,
	&:focus {
		.reader-import-button__icon,
		.reader-export-button__icon {
			fill: $white;
		}

		.reader-import-button__label,
		.reader-export-button__label {
			color: $white;
		}
	}
}

.following-manage .reader-recommended-sites {
	border-bottom: 1px solid lighten( $gray, 30% );
}

.following-manage__search-followed {
	margin-left: 0;
}

.following-manage__search-followed-input {

	@include breakpoint( ">960px" ) {
		min-width: 200px;
	}
}

.following-manage__sites-window-scroller-row-wrapper {
	border-bottom: 1px solid lighten( $gray, 30% );

	&:last-child {
		border: 0;
	}
}

.following-manage__url-follow {
	border-bottom: 1px solid lighten( $gray, 30% );
	padding: 13px 0 10px;
	display: flex;
	justify-content: center;

	.follow-button {
		.gridicon {
			fill: $blue-medium;
		}

		.follow-button__label {
			color: $blue-medium;

			@include breakpoint ("<660px" ) {
				display: inline;
			}
		}

		&.is-following {
			.gridicon {
				fill: $alert-green;
			}

			.follow-button__label {
				color: $alert-green;
			}
		}
	}
}

