Reader: Fix site tools spacing (#13970)
* Reader: Fix site tools spacing

* Align in Safari

--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -69,11 +69,9 @@
 	}
 
 	.following-manage__subscriptions-header {
-		align-items: center;
-		display: flex;
 		flex: 1;
 		font-weight: 600;
-		padding-bottom: 15px;
+		padding: 4px 0 15px;
 
 		@include breakpoint( "<960px" ) {
 			flex: 0 0 auto;
@@ -108,6 +106,7 @@
 		color: $gray;
 		font-size: 12px;
 		font-weight: normal;
+		padding-top: 8px;
 		width: 100%;
 
 		@include breakpoint( ">960px" ) {
@@ -136,7 +135,7 @@
 
 		.search__input {
 			background: transparent;
-			height: 30px;
+			padding-bottom: 5px;
 		}
 	}
 
